Update and rename 2022-03-04-인공지능프로그램.md to 2022-03-04-게임프로그램.md

--- a/_posts/2022-03-04-게임프로그램.md
+++ b/_posts/2022-03-04-게임프로그램.md
@@ -1,14 +1,10 @@
 ---
 layout: post
-title: 인공지능프로그램
 optimized_image: https://user-images.githubusercontent.com/100888733/156873489-4d6c24a3-a097-4103-9151-fadcc7f0f945.jpg
 paginate: true
 
 ---
-Game
-====
-
-* 처음 만드는 온라인 게임
+* 온라인 게임
   * [온라인 게임 01 : 주제 / 대상 독자 / 개발 원칙](https://brunch.co.kr/@wedump/4)
   * [게임 02 : 요구사항 정의 설계](https://brunch.co.kr/@wedump/5)
   * [게임 03-01 : Python HTTP server 개발](https://brunch.co.kr/@wedump/6)
