--- a/_posts/2022-03-02-현재까지 인공지능 기술의 진화.md
+++ b/_posts/2022-03-02-현재까지 인공지능 기술의 진화.md
@@ -12,7 +12,6 @@ paginate: true
 &nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***Google의 인공지능 단기개발 집중과정***</span>](https://developers.google.com/machine-learning/crash-course) <br>
 &nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***Google의 인공지능 온라인 체험***</span>](http://www.minaminjee.com/) <br>
 &nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***인공지능 체험과 실습***</span>](https://www.hellosoft.fun/aidemo/) <br>
-&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***인공지능 Pro3 게임자료***</span>](http://www.gameaipro.com) <br>
 
 ***인공지능 챗봇***<br>
 &nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***상담으로 구매까지***</span>](https://channel.io/ko)<br>
@@ -213,10 +212,58 @@ paginate: true
 &nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***AI 디자이너***</span>](http://www.aitimes.kr/news/articleView.html?idxno=20665)<br> 
 
 ***인공지능 로봇***<br>
-&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***에이수스 가정용 로봇, 젠보***</span>](https://www.engadget.com/)<br> 
-&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***엔가젯***</span>](https://www.engadget.com)<br> 
-인공감성기술 로봇,가사지원 로봇,실버 로봇,교육 로봇,오락 로봇,의료 로봇,헬스케어 로봇,국방 로봇,안전 로봇,해양 로봇,환경 로봇,구조물들의 유지보수 로봇,안전점검 로봇,원격수술 로봇,
-간호 로봇,농업용 로봇,전투 로봇,제조 로봇,건설 로봇.
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***가정용_에이수스 인공지능 로봇,젠보***</span>](https://www.engadget.com/)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***간호용_초현실적인 간호사 로봇 ‘그레이스’를 소개합니다***</span>](https://nownews.seoul.co.kr/news/newsView.php?id=20210908601005&wlog_tag3=naver)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***건설용_현대건설, AI건설로봇 현장에 투입***</span>](http://www.aitimes.kr/news/articleView.html?idxno=14780)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***공사용_난공사현장 작업도 가능***</span>](http://m.dnews.co.kr/m_home/view.jsp?idxno=202101042333140660166)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***교육용_인공지능로봇 학교등장***</span>](https://smartcontentcenter.tistory.com/1132)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***국방용_인공지능(AI)을 국방분야에 활용***</span>](https://scienceon.kisti.re.kr/mobile/srch/selectPORSrchReport.do?cn=TRKO201700005055)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***농업용_인공지능로봇없는 농업은 없다***</span>](http://www.aitimes.com/news/articleView.html?idxno=140272)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***무기용_자율살상 무기 상용화***</span>](https://www.yna.co.kr/view/AKR20210708059300009)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***상담용_솔트룩스,인공지능로봇상담원***</span>](http://www.saltlux.com/index.do)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***수중용_수중로봇도 자율시대***</span>](https://www.news1.kr/articles/?4465030)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***안전용_인류안전 기술개발 앞장서는 지스트***</span>](http://www.aitimes.com/news/articleView.html?idxno=140629)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***안전점검용_안전점검 인공지능로봇이 맡는다***</span>](https://www.inews24.com/view/1433543)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***유지보수용_AI로 유지보수***</span>](http://www.aitimes.com/news/articleView.html?idxno=128853)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***유지보수용_美, 위성수리보수 인공지능로봇이 맡는다***</span>](http://www.irobotnews.com/news/articleView.html?idxno=27566)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***인공지능_사람의 생각을 기계감각에 잇다***</span>](https://www.hani.co.kr/arti/society/schooling/1010392.html)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***의료용_의료혁명 인공지능로봇***</span>](https://www.chosun.com/economy/tech_it/2021/01/07/6NOQV4SBTZGF7OR2WL2ZOZ7OCE/)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***의사용_진찰부터 수술까지, 로봇의사가 다 합니다***</span>](https://www.irobotnews.com/news/articleView.html?idxno=24720)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***장애자용_이동변기 인공지능로봇***</span>](http://www.irobotnews.com/news/articleView.html?idxno=5974)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***장애자용_이동침대 인공지능로봇***</span>](http://www.irobotnews.com/news/articleView.html?idxno=5974)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***제조용_제조업계 인공지능로봇***</span>](https://redshift.autodesk.co.kr/ai-in-manufacturing/)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***케어용_AI 케어로봇 시니어***</span>](https://enterprise.kt.com/pd/P_PD_AI_RB_003.do)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***환경용_기술발전으로 오염된 환경  인공지능로봇이 해결***</span>](http://www.aitimes.com/news/articleView.html?idxno=139552)<br> 
+&nbsp;&nbsp;&nbsp;&nbsp;[<span style="color:red">***헬스케어용_KIST 헬스케어 로봇연구단***</span>](https://www.medibot.kist.re.kr/introduction)<br> 
+비행로봇
+개인화 서비스로봇
+원격으로 체험로봇
+아바타로봇
+전투로봇
+건설로봇
+교량로봇
+빌딩로봇
+터널로봇
+도로로봇
+철도로봇
+공항로봇
+항만로봇
+무인운전로봇
+투자로봇
+슈퍼컴퓨터 수천 배 성능
+연주해주는 로봇
+기계설계로봇
+인공지능 로봇이 고객을 맞이
+무인배달로봇
+로봇 쉐프로봇
+주문 즉시 자동화된 메카노이드가 음식을 만든다. 
+피자로봇
+로봇푸드
+정찰용 로봇
+로봇 택시
+범죄자를 체포하는 로보캅
+재활로봇 
+로봇개’가 시설 점검
+로봇팔’이 짐을 내린다
 
 ---
-
