Update and rename 2022-03-04-국내여행지.md to 2022-03-04-여행을떠나요.md

--- a/_posts/2022-03-04-여행을떠나요.md
+++ b/_posts/2022-03-04-여행을떠나요.md
@@ -41,6 +41,18 @@ paginate: true
 [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가볼만한곳](https://leejh0624.tistory.com/244) <br>
 
 
+[<span style="color:red">***▪동해***</span>](https://www.google.co.kr/maps/search/%EB%8F%99%ED%95%B4+%EA%B0%80%EB%B3%BC%EB%A7%8C%ED%95%9C%EA%B3%B3/@37.5060683,129.0124964,12z/data=!3m1!4b1?hl=ko)
+[&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가볼만한곳](https://lifeee.tistory.com/3291) <br>
+
+
+[<span style="color:red">***▪양양***</span>](https://www.google.co.kr/maps/search/%EC%96%91%EC%96%91+%EA%B0%80%EB%B3%BC%EB%A7%8C%ED%95%9C%EA%B3%B3/@37.505943,128.5205042,9z/data=!3m1!4b1?hl=ko)
+[&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가볼만한곳](https://lifeee.tistory.com/3295) <br>
+
+
+[<span style="color:red">***▪삼척***</span>](https://www.google.co.kr/maps/search/%EC%82%BC%EC%B2%99+%EA%B0%80%EB%B3%BC%EB%A7%8C%ED%95%9C%EA%B3%B3/@37.3539465,129.0380614,11z/data=!3m1!4b1?hl=ko)
+[&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가볼만한곳](https://09832091.tistory.com/81) <br>
+
+
 [<span style="color:red">***▪양평***</span>](https://www.google.co.kr/maps/search/%EC%96%91%ED%8F%89+%EA%B0%80%EB%B3%BC%EB%A7%8C%ED%95%9C%EA%B3%B3/@37.5437159,127.3257859,11z/data=!3m1!4b1?hl=ko)
 [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가볼만한곳](https://fn3995.tistory.com/43) <br>
 
