--- a/_posts/book/꿀비 소리책방.md
+++ b/_posts/book/꿀비 소리책방.md
@@ -1,3 +1,18 @@
+ 마음을 쉬게하는 법 / 가토 다이조
+ 배반의 여름 / 박완서
+(제2부) 발자국 소리 / 정도상
+(제1부) 발자국 소리 / 정도상
+동백꽃 /김유정
+육촌 형 / 이현주
+겨울 나들이 / 박완서
+제3부 그 가을의 사흘 동안 / 박완서
+제2부 / 그 가을의 사흘 동안 / 박완서
+제1부/ 그 가을의 사흘 동안 / 박완서
+아무도 모른다/ 오영이
+하루 꿀 한 스픈/사람들 속에서 혹은 속으로
+나이듦에 대하여 / 박혜란
+조그만 체험기 / 박완서
+아우를 위하여 /황석영
 나보다 더 푸른 나를 생각합니다 / 양광모 시집
 사람이 그리워야 사람이다 / 양광모
 소설이 곰치에게 줄 수 있는 것/ 최석규
