Update 책 읽어주는 여자사람.md

--- a/_posts/radio book/책 읽어주는 여자사람.md
+++ b/_posts/radio book/책 읽어주는 여자사람.md
@@ -2,7 +2,7 @@
 199. 고르고 고른 말_홍인혜(창비)
 198. 카페에서 공부하는 할머니_심혜경
 197. 한 게으른 시인의 이야기_최승자
-196. 나의 복숭아(꺼내놓는 비밀들)_김신회, 남궁인 외 7인
+196. 나의 복숭아(꺼내놓는 비밀들)_김신회
 195. Was liebe ist, 사랑이 사랑이기 이전에_안리타
 194. 세상의 당신들_이주옥 수필집
 193. Zeit Meines Levens
@@ -10,9 +10,9 @@
 191. 애린 왕자
 190. 아무튼, 하루키_이지
 189. 달러구트 꿈 백화점_이미예
-188.그때의 나에게 해주고 싶은 이야기_투에고
-187.실패를 사랑하는 직업_요조
-186.죽은 자의 집 청_김완
+188. 그때의 나에게 해주고 싶은 이야기_투에고
+187. 실패를 사랑하는 직업_요조
+186. 죽은 자의 집 청_김완
 185. 나는 나로 살기로 했다_김수현
 184. 사랑이 한 일_이승우
 183. 우리를 둘러싼 바다_레이첼 카슨
@@ -48,7 +48,6 @@
 153. 시작의 기술_개리 비숍
 152. 신곡_단테 알리기에리
 151. 2019 제64회 현대문학상 수상시집_수상자 안미옥
-[bgm] 요청 많았던 책여사 브금 1시간
 150. 미루다가 영영 못 읽을까봐_송기정
 149. 백년을 살아보니_김형석
 148. 한강, 채식주의자 깊게 읽기_정미숙 외 지음
@@ -57,7 +56,7 @@
 145. 왜 세계의 가난은 사라지지 않는가 _장 지글러
 144. 너의 아름다움이 온통 글이 될까봐 
 143. 우리가 참 아끼던 사람_소설가 박완서 대담집
-142. [21세기북스X책.여.사]그래서, 하고싶은 말이 뭡니까?_김범준
+142. 그래서, 하고싶은 말이 뭡니까?_김범준
 141. 호킹의 빅 퀘스천에 대한 간결한 대답_스티븐 호킹
 140. 마블이 설계한 사소하고 위대한 과학_세바스찬 알바라도
 139. 꾸뻬씨의 시간여행_프랑수아 를로르
@@ -83,11 +82,10 @@
 118. 빨강머리 앤이 하는 말_백영옥
 117. 국가란 무엇인가_유시민
 116. 여행의 이유_김영하
-[공지]결혼합니다, 여행지에서 읽을책
-115. 채소의 기분, 바다표범의 키스_무라카미 하루키_비채
+115. 채소의 기분, 바다표범의 키스_무라카미하루키
 114. 나홀로 산티아고_박미희_아우룸 출판사
 113. 산토리니_이오스여행사 여행책자
-112. 지적이고 아름다운 삶을 위한 '라틴어 수업'_한동일
+112. 지적이고 아름다운 삶을 위한 라틴어수업_한동일
 111. 그리고 생활은 계속된다_이나가키 에미코
 109. 독일인의 사랑_막스 뮐러
 108. 유시민의 공감필법_유시민
@@ -109,10 +107,10 @@
 92. 자식이 뭐라고_사노 요코
 91. 보노보노처럼 살다니 다행이야_김신회
 90. 아무도 아닌_황정은
-89. 우리는 좀더 어두워지기로 했네_이설아 시집
+89. 우리는 좀더 어두워지기로 했네_이설아
 88. 몸을 씁니다_플로랑스 비나이
 87. 약한연결_아즈마 히로키
-86. 키스하기 전에 우리가 하는 말들_알랭 드 보통
+86. 키스하기 전에 우리가 하는 말들_알랭 드보통
 85. 죽는게 뭐라고_사노 요코
 84. 사는게 뭐라고_사노 요코
 83. 서랍에 저녁을 넣어 두었다_한강
@@ -121,12 +119,12 @@
 80. 너무 시끄러운 고독_보후밀 흐라발
 79. 나는 당신에게만 열리는 책_허은실
 78. 부유하는단어들_최인호
-77. 아침에 눈을 뜨면 바람이 부는대로-사노 요코
-76. 나이 듦과 죽음에대하여_몽테누<수상록>선집
+77. 아침에 눈을 뜨면 바람이 부는대로-사노요코
+76. 나이 듦과 죽음에대하여_몽테누
 75. 멈추면, 비로소 보이는 것들_혜민스님
 74. 숨결이 바람 될 때_폴 칼라니티
 73. 탐독_어수웅
-72. 노무현의 민주주의/사람 사이에 삶의 길이 있고/아비 그리울 때 보라
+72. 노무현의 민주주의/사람 사이에 삶의 길다
 71. 당신의 이름을 지어다 며칠은 먹었다_박준
 70. 채식주의자_한강
 69. 안녕 다정한 사람_이병률
@@ -148,10 +146,10 @@
 53. 내가 사랑한 유럽 TOP10_정여울
 52. 나는, 집_연서인
 51. 수선화에게_정호승
-50. 사랑 두 글자만 쓰다가 다 닳은 연필_이외수
-49. 2015.제6회 젊은작가상 수상작품집 '여름의 정오'_백수린
+50. 사랑 두글자만 쓰다가 다 닳은연필_이외수
+49. 젊은작가상 수상작품집 '여름의 정오'_백수린
 48. 내가 누구든 얼머나 외롭든_김연수
-47. 유배지에서 보낸 편지_정약용(박석무 역)
+47. 유배지에서 보낸 편지_정약용
 46. 사랑하지 말자_도올 김용옥
 45. 철학이 필요한 시간_강신주
 44. 읽다_김영하
@@ -161,8 +159,8 @@
 40. 나는 나를 파괴할 권리가 있다_김영하
 39. 너는 물처럼 내게 밀려오라_이정하
 38. 새벽 세시, 바람이 부나요?_다니엘 글라타우어
-37. 냉정과 열정사이(아오이)_에쿠니가오리
-36. 냉정과 열정사이(준세이)_츠지 히토나리
+37. 냉정과 열정사이_에쿠니가오리
+36. 냉정과 열정사이_츠지 히토나리
 35. 은밀하게 나를 사랑한 남자_에릭 포토리노
 34. 여자라는 생물_마스다 미리
 33. 글쓰는 여자의 공간_타니아 슐리
