Update and rename 2022-02-28-완규가 만든 어플.md to 2022-02-28-구글스토어_어플.md

--- a/_posts/2022-02-28-구글스토어_어플.md
+++ b/_posts/2022-02-28-구글스토어_어플.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 완규가 만든 어플
+title: 구글스토어_어플
 optimized_image: https://user-images.githubusercontent.com/13609186/158834660-ecd2ef54-4f3c-4a88-9b7c-433fa1abe1a8.jpg
 paginate: true
 
