--- a/_posts/2022-02-27-주니유튜브.md
+++ b/_posts/2022-02-27-주니유튜브.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 여준이유튜브
+title: 주니유튜브
 optimized_image: https://user-images.githubusercontent.com/13609186/158834851-5c5d7736-001b-448d-8bb6-eb99f2f16233.jpg
 paginate: true
 
