--- a/_posts/테스트.md
+++ b/_posts/테스트.md
@@ -1,1 +1,5 @@
-
+Process ps = new Process();
+ps.StartInfo.FileName = "Guitar Pro 6.exe";
+ps.StartInfo.WorkingDirectory = "d:\\exe";
+ps.StartInfo.WindowStyle = ProcessWindowStyle.Normal;
+ps.Start();
