--- a/_posts/테스트.md
+++ b/_posts/테스트.md
@@ -1,3 +1,15 @@
+---
+
+layout: post
+
+subtitle: 'uytyuiopoiuytyuiu....'
+image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824575/theme14_gi2ypv.jpg
+optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559824575/theme14_gi2ypv.jpg
+paginate: true
+
+---
+
+
 Process ps = new Process();
 ps.StartInfo.FileName = "Guitar Pro 6.exe";
 ps.StartInfo.WorkingDirectory = "d:\\exe";
