--- a/_posts/테스트.md
+++ b/_posts/테스트.md
@@ -1,10 +1,6 @@
 ---
-
 layout: post
-
-subtitle: 'uytyuiopoiuytyuiu....'
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824575/theme14_gi2ypv.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559824575/theme14_gi2ypv.jpg
+optimized_image: https://user-images.githubusercontent.com/13609186/158834851-5c5d7736-001b-448d-8bb6-eb99f2f16233.jpg
 paginate: true
 
 ---
