--- a/_posts/03-18-테스트.md
+++ b/_posts/03-18-테스트.md
@@ -1,2 +1,12 @@
+---
+layout: post
+title: VIMEO_지구, 일본, BTS
+optimized_image: https://user-images.githubusercontent.com/13609186/158834973-01225e66-bf87-4809-9d2b-02733fe76f23.jpg
+paginate: true
+
+---
 
 <a href="fmp://127.0.0.1:5900">실행</a>
+
+
+---
