Update and rename 2022-03-18-테스트.md to 2022-01-18-기타프로6.md

--- a/_posts/2022-01-18-기타프로6.md
+++ b/_posts/2022-01-18-기타프로6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 테스트
+title: 2022-01-18-기타프로6
 optimized_image: https://user-images.githubusercontent.com/13609186/158834973-01225e66-bf87-4809-9d2b-02733fe76f23.jpg
 paginate: true
 
@@ -8,10 +8,6 @@ paginate: true
 
 <a href="fmp://127.0.0.1:5900">실행</a>
 
-
----
-
-<a href="https://github.com/choijangwook/cjw/blob/master/exe/run.bat">될려나</a>
 
 ---
 
