--- a/_posts/lotto_tcp_one_20220303.ipynb
+++ b/_posts/lotto_tcp_one_20220303.ipynb
@@ -1,4 +1,35 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "자동 로또 번호 생성기",
+      "provenance": [],
+      "authorship_tag": "ABX9TyPR469x9vfj4ok05VnP4IPC",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/limdiny/DataStructure-Algorithm/blob/main/%EC%9E%90%EB%8F%99_%EB%A1%9C%EB%98%90_%EB%B2%88%ED%98%B8_%EC%83%9D%EC%84%B1%EA%B8%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
 
 
 
