--- a/_posts/lotto_tcp_one_20220303.ipynb
+++ b/_posts/lotto_tcp_one_20220303.ipynb
@@ -24,13 +24,9 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/limdiny/DataStructure-Algorithm/blob/main/%EC%9E%90%EB%8F%99_%EB%A1%9C%EB%98%90_%EB%B2%88%ED%98%B8_%EC%83%9D%EC%84%B1%EA%B8%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/drive/1AxrCE8nRkYJO8_F7E5b2T8vOOxMLBQDi"/></a>"
       ]
     },
-    {
-      "cell_type": "code",
-      "source": [
-
 
 
 
