--- a/_posts/2022-03-16-원룸을 알자.md
+++ b/_posts/2022-03-16-원룸을 알자.md
@@ -35,5 +35,29 @@ paginate: true
 [<span style="color:red">***▪부동산 스터디***</span>](https://cafe.naver.com/jaegebal/3660663)<br>
 [<span style="color:red">***▪신축빌라 검색***</span>](http://sellinghousing.kr/grid)<br>
 
+**[원룸 통매매]** <br>
+
+◼2022년4월10일 기준<br>
+◼원룸건물은 1주택,세금 유리함<br>
+◼원룸건물에 1층상가이면 다주택<br>
+◼상가건물은 다주택,세금 불리함<br>
+
+[▪평택 3층 상가주택 매매,매매가11억5천,실투자금3억3천](https://www.youtube.com/watch?v=s7tjuzqnw7k)<br>
+
+[▪매매가 6억5천 평택상가 주택매매,실투자금2억6000,평택역 도보10분
+](https://www.youtube.com/watch?v=59isrP7nDXk)<br>
+
+[▪실투자금 4억6천,주인세대 입주가능,평택동삭동,상가주택매매](https://www.youtube.com/watch?v=1B54k2gCC7s)<br>
+
+[▪세교동.매매가11억.융자3억2000.보증금3억500.인수가4억7500만원:1층상가17평,원룸10방](https://www.youtube.com/watch?v=9YCG9swchGw)<br>
+
+[▪평택역5분 다가구주택 매매 7억](https://www.youtube.com/watch?v=x5KwVnAl1z0&t=127s)<br>
+
+[▪평택역소형다가구주택 매매 6억](https://www.youtube.com/watch?v=HonDAsvhiEQ)<br>
+
+[▪평택 원룸 건물매매 고덕면 두릉리 매매14억 월850만원 나와요](https://www.youtube.com/watch?v=wWD_Xed9SM0)<br>
+
+
+
 ---
 
