--- a/_posts/2022-03-19-재미나는 과학.md
+++ b/_posts/2022-03-19-재미나는 과학.md
@@ -6,9 +6,28 @@ paginate: true
 
 ---
 
-**[교양 책읽기]** <br>
-[<span style="color:red">***▪슈카월드***</span>](https://www.youtube.com/channel/UCsJ6RuBiTVWRX156FVbeaGg) :  <br>
-[<span style="color:red">***▪쏨작가의지식사전***</span>](https://www.youtube.com/c/%EC%8F%A8%EC%9E%91%EA%B0%80%EC%9D%98%EC%A7%80%EC%8B%9D%EC%82%AC%EC%A0%84) : 역사/인물/심리/신화/괴담/미스터리<br>
+**[과학]** <br>
+[<span style="color:red">***▪국가과학기술연구회***</span>](https://www.youtube.com/c/%EA%B5%AD%EA%B0%80%EA%B3%BC%ED%95%99%EA%B8%B0%EC%88%A0%EC%97%B0%EA%B5%AC%ED%9A%8C):<br>
+[<span style="color:red">***▪YTN 사이언스***</span>](https://www.youtube.com/c/YTN%EC%82%AC%EC%9D%B4%EC%96%B8%EC%8A%A4TV)<br>
+[<span style="color:red">***▪Topic***</span>](https://www.youtube.com/channel/UCSdz4cIYVjtBb3_AuTR6LLg)<br>
+[<span style="color:red">***▪과학하고 앉아있네***</span>](https://www.youtube.com/channel/UC_LO0RU54AgRBOqGiMYGIlg)<br>
+[<span style="color:red">***▪김필재 TV***</span>](https://www.youtube.com/c/%EA%B9%80%ED%95%84%EC%9E%ACTV-KPJTV)<br>
+[<span style="color:red">***▪지식보관소***</span>](https://www.youtube.com/c/%EC%A7%80%EC%8B%9D%EB%B3%B4%EA%B4%80%EC%86%8C)<br>
+[<span style="color:red">***▪과학쿠키***</span>](https://www.youtube.com/c/%EA%B3%BC%ED%95%99%EC%BF%A0%ED%82%A4ScienceCookie)<br>
+[<span style="color:red">***▪과학드림***</span>](https://www.youtube.com/c/ScienceDream)<br>
+[<span style="color:red">***▪카오스 사이언스***</span>](https://www.youtube.com/c/KAOSscience)<br>
+[<span style="color:red">***▪Amazing Story***</span>](https://www.youtube.com/c/AmazingStory)<br>
+[<span style="color:red">***▪지식N상식***</span>](https://www.youtube.com/channel/UCmHof0uMcf-KZOZfxmbRrOw)<br>
+[<span style="color:red">***▪에스오디***</span>](https://www.youtube.com/c/%EC%97%90%EC%8A%A4%EC%98%A4%EB%94%94STORY)<br>
+[<span style="color:red">***▪리뷰엉이***</span>](https://www.youtube.com/c/Owlsreview)<br>
+[<span style="color:red">***▪북툰***</span>](https://www.youtube.com/c/%EB%B6%81%ED%88%B0)<br>
+[<span style="color:red">***▪신박과학***</span>](https://www.youtube.com/channel/UCPuDvuUhgQffuLn8sYxIEqQ)<br>
+[<span style="color:red">***▪슈카월드***</span>](https://www.youtube.com/channel/UCsJ6RuBiTVWRX156FVbeaGg)<br>
+[<span style="color:red">***▪안될과학***</span>](https://www.youtube.com/channel/UCMc4EmuDxnHPc6pgGW-QWvQ)<br>
+
+
+**[교양]** <br>
+[<span style="color:red">***▪쏨작가의지식사전***</span>](https://www.youtube.com/c/%EC%8F%A8%EC%9E%91%EA%B0%80%EC%9D%98%EC%A7%80%EC%8B%9D%EC%82%AC%EC%A0%84)<br>
 [<span style="color:red">***▪EBS 교양문화***</span>](https://www.youtube.com/c/EBSCulture/channels) : 교양문화<br>
 [<span style="color:red">***▪윤꾼의 북킹부킹***</span>](https://www.youtube.com/c/%EC%9C%A4%EA%BE%BC%EC%9D%98%EB%B6%81%ED%82%B9%EB%B6%80%ED%82%B9) : 교양서적<br>
 [<span style="color:red">***▪라임양***</span>](https://www.youtube.com/c/%EB%9D%BC%EC%9E%84%EC%96%91) : 다양한 인문학<br>
@@ -18,13 +37,15 @@ paginate: true
 [<span style="color:red">***▪별별역사***</span>](https://www.youtube.com/channel/UCYuiS1EYw54dEJVzseQSYXw/videos) : 세계사<br>
 [<span style="color:red">***▪함께하는 세계사***</span>](https://www.youtube.com/channel/UCdop7AYwvReE6jK7M69MA2A) : 세계사<br>
 [<span style="color:red">***▪로빈의 역사기록***</span>](https://www.youtube.com/channel/UCTy-6Pfkmv5fLTMOm04tw4g) : 세계사<br>
-[<span style="color:red">***▪안될과학***</span>](https://www.youtube.com/channel/UCMc4EmuDxnHPc6pgGW-QWvQ) : 과학관련 주제를 굉장히 빠르게 홍보<br>
 [<span style="color:red">***▪책읽는 책도리***</span>](https://www.youtube.com/channel/UCbaXu_mTn6ya_pabSkx7xxw/videos) : 북튜버 북튜브 독서 책소개<br>
 [<span style="color:red">***▪괴담실록***</span>](https://www.youtube.com/c/%EA%B4%B4%EB%8B%B4%EC%8B%A4%EB%A1%9D/videos) : 조선·동아시아 야사·괴담<br>
+[<span style="color:red">***▪싱글벙글***</span>](https://www.youtube.com/channel/UC7_CFRfhIj-fSk3patOQOaw)<br>
+[<span style="color:red">***▪시크릿톡***</span>](https://www.youtube.com/channel/UCHPQGgSdqKP6zCwLarhO48g/videos)<br>
 
 
 **[기타연주]** <br>
 [<span style="color:red">***▪뚱치땅치***</span>](https://www.youtube.com/c/%EB%9A%B1%EC%B9%98%EB%95%85%EC%B9%98Fingerstylish) : 기타연주<br>
+[<span style="color:red">***▪7080 통기타 콘서트 100곡***</span>](https://www.youtube.com/watch?v=ULsPY9XhTfA)<br>
 
 
 **[유머1번지]** <br>
@@ -42,11 +63,11 @@ paginate: true
 
 
 **[영화보기]** <br>
-
 [<span style="color:red">***▪보배링크-세상 모든링크가 모였다***</span>](https://www.bobaelink9.top/)<br>
 [<span style="color:red">***▪전세계의 TV 프로그램과 영화***</span>](https://www.viki.com/explore)<br>
 [<span style="color:red">***▪링크천국***</span>](https://www.hotword.site/bbs/group.php?gr_id=cn)<br>
 [<span style="color:red">***▪세상 모든링크가 모였다***</span>](https://www.bobaelink8.top/)<br>
+
 
 **[만화보기]** <br>
 [<span style="color:red">***▪웹툰보기***</span>](https://newtoki123.com/webtoon?toon=%EC%9D%BC%EB%B0%98%EC%9B%B9%ED%88%B0)<br>
