--- a/_posts/2022-04-08-영화 바로보기.md
+++ b/_posts/2022-04-08-영화 바로보기.md
@@ -8,8 +8,6 @@ paginate: true
 **[영화보기]** <br>
 [<span style="color:red">***▪마루티비***</span>](https://a8.marutv.xyz/bbs/board.php?bo_table=kmovie)<br>
 [<span style="color:red">***▪Asian Drama, Movies***</span>](https://watchasian.sh/)<br>
-[<span style="color:red">***▪무비나와***</span>](https://v39.movienawa.net/fmovie/)<br>
-[<span style="color:red">***▪v25.sonagitv.org***</span>](https://v25.sonagitv.org/)<br>
 [<span style="color:red">***▪코리안즈 링크티비***</span>](https://a8.koreanz.xyz/bbs/main.php?gid=moviedasi)<br>
 [<span style="color:red">***▪호박티비***</span>](https://l98.hobaktv.xyz/show/movie)<br>
 [<span style="color:red">***▪오티지티비***</span>](https://i13.otgtv.top/show/movie)<br>
@@ -17,12 +15,12 @@ paginate: true
 [<span style="color:red">***▪주주티비클럽***</span>](https://p15.joojootv.club/bbs/board.php?bo_table=movie)<br>
 [<span style="color:red">***▪펀링크***</span>](https://z36.funlink0.com/bbs/board.php?bo_table=movie)<br>
 [<span style="color:red">***▪신나무비***</span>](https://s60.sinnamovie.com/bbs/board.php?bo_table=movie)<br>
+[<span style="color:red">***▪피스컬코드***</span>](https://fiscalcode.com/%EC%98%81%ED%99%94-%EB%AC%B4%EB%A3%8C-%EB%B3%B4%EA%B8%B0-%EC%82%AC%EC%9D%B4%ED%8A%B8-top-10-%EC%B5%9C%EC%8B%A0-%EC%98%81%ED%99%94-%EB%B0%8F-%EB%AF%B8%EA%B5%AD-%EC%98%81%ED%99%94/)<br>
 [<span style="color:red">***▪무비다시***</span>](https://a8.moviedasi.xyz/)<br>
 [<span style="color:red">***▪보배링크-세상모든링크***</span>](https://www.bobaelink9.top/)<br>
 [<span style="color:red">***▪전세계TV 프로그램-영화***</span>](https://www.viki.com/explore)<br>
 [<span style="color:red">***▪링크천국***</span>](https://www.hotword.site/bbs/group.php?gr_id=cn)<br>
 [<span style="color:red">***▪PLAYYMOVIE***</span>](https://www.youtube.com/channel/UC7Sh_erU4sKLVgu2eJikrIw)<br>
-[<span style="color:red">***▪영화무료보기사이트10***</span>](https://fiscalcode.com/%EC%98%81%ED%99%94-%EB%AC%B4%EB%A3%8C-%EB%B3%B4%EA%B8%B0-%EC%82%AC%EC%9D%B4%ED%8A%B8-top-10-%EC%B5%9C%EC%8B%A0-%EC%98%81%ED%99%94-%EB%B0%8F-%EB%AF%B8%EA%B5%AD-%EC%98%81%ED%99%94/)<br>
 
 
 **[만화보기]** <br>
