--- a/_posts/2023-03-18-인공지능.md
+++ b/_posts/2023-03-18-인공지능.md
@@ -45,6 +45,14 @@ paginate: true
 | [매월 600만원 날로 버는 방법](https://www.youtube.com/watch?v=UScaaYNqZ7k) | [무료 이미지로 하루50만원](https://www.youtube.com/watch?v=IyiQFHoZOWU&t=12s) |
 | [퀴즈로 하루20만원](https://www.youtube.com/watch?v=K0O_Pma8hAw&t=357s) | [절약왕 정약용](https://www.youtube.com/@jyyjyy/videos) |
 
+**[중국드라마 다시보기]** <br>
+
+| [Netflix](https://www.netflix.com/kr/) | [Drama Cool](https://watchasian.id/) | [텐센트 비디오](https://v.qq.com/) |
+| :---: | :---: | :---: |
+| [百度](http://v.xiaodutv.com/tv) | [优酷](https://www.youku.com/channel/webhome) | [AsianCrush](https://www.asiancrush.com/) |
+| [乐视](https://tv.le.com/) | []() | []() |
+
+
 
 ---
 
