Update and rename 2022-02-28-구글크롬 등록 어플.md to 2022-02-28-구글스토어 어플.md

--- a/_posts/2022-02-28-구글스토어 어플.md
+++ b/_posts/2022-02-28-구글스토어 어플.md
@@ -1,22 +1,17 @@
 ---
 layout: post
-title: 구글크롬 등록 어플
+title: 구글스토어 어플
 optimized_image: https://user-images.githubusercontent.com/13609186/158834851-5c5d7736-001b-448d-8bb6-eb99f2f16233.jpg
 paginate: true
 
 ---
+
+&nbsp;&nbsp;&nbsp;&nbsp;.구글스토어에서 설치해 주세요<br>
+&nbsp;&nbsp;&nbsp;&nbsp;.개선할 점과 평가를 부탁드려요.<br>
+
  [<span style="color:red">***💯다육이 이름찾기***</span>](https://da6.netlify.app/#.Yh3cF7Jc.kakaotalk)<br>
  [<span style="color:red">***🕒얼굴로 보는 나의 범죄 유형은??***</span>](https://facescience.netlify.app/)<br>
  [<span style="color:red">***🕗나랑 닮은 재벌은 누규??***</span>](https://richguy.netlify.app/)<br>
  [<span style="color:red">***🕦인공지능 물고기 이름 찾기***</span>](https://fishname.netlify.app/)<br>
 <br>
-💯다육이 이름찾기<br>
-&nbsp;&nbsp;&nbsp;&nbsp;.구글스토어에서 설치해 주세요<br>
-&nbsp;&nbsp;&nbsp;&nbsp;.개선할 점과 평가를 부탁드려요.<br>
-🕒얼굴로 보는 나의 범죄 유형은??<br>
-🕗나랑 닮은 재벌은 누규??<br>
-🕦인공지능 물고기 이름 찾기<br>
-
-<br>
-
 ---
