Update and rename 2022-01-14-깃허브.md to 2022-01-14-Github.md

--- a/_posts/2022-01-14-Github.md
+++ b/_posts/2022-01-14-Github.md
@@ -5,7 +5,11 @@ paginate: true
 
 ---
 
-**[깃허브 자료]** <br>
+**[나의 아바타]** <br>
+https://photos.google.com/photo/AF1QipPOVRB_6k1dxPnWAKuYzXkeSguIKiLdS2ji1d5R
+
+---
+**[Github 자료]** <br>
 [<span style="color:red">***▪git-fast-version-control***</span>](https://git-scm.com/book/ko/v2)<br>
 [<span style="color:red">***▪웹 브라우저에서 데스크톱 응용 프로그램***</span>](https://www.sysnet.pe.kr/Default.aspx?mode=2&sub=0&detail=1&pageno=0&wid=11239&rssMode=1&wtype=0)<br>
 [<span style="color:red">***▪GitHub 문서***</span>](https://docs.github.com/en/get-started/quickstart/hello-world)<br>
@@ -39,7 +43,7 @@ paginate: true
 
 **[과학 유튜브]** <br>
 
-| [나의 아바타](https://photos.google.com/photo/AF1QipPOVRB_6k1dxPnWAKuYzXkeSguIKiLdS2ji1d5R) | [안될과학](https://www.youtube.com/channel/UCMc4EmuDxnHPc6pgGW-QWvQ) | [국가과학기술연구회](https://www.youtube.com/c/%EA%B5%AD%EA%B0%80%EA%B3%BC%ED%95%99%EA%B8%B0%EC%88%A0%EC%97%B0%EA%B5%AC%ED%9A%8C) |
+| [슈카월드](https://www.youtube.com/channel/UCsJ6RuBiTVWRX156FVbeaGg) | [안될과학](https://www.youtube.com/channel/UCMc4EmuDxnHPc6pgGW-QWvQ) | [국가과학기술연구회](https://www.youtube.com/c/%EA%B5%AD%EA%B0%80%EA%B3%BC%ED%95%99%EA%B8%B0%EC%88%A0%EC%97%B0%EA%B5%AC%ED%9A%8C) |
 | :--- | :--- | :--- |
 | [YTN사이언스](https://www.youtube.com/c/YTN%EC%82%AC%EC%9D%B4%EC%96%B8%EC%8A%A4TV) | [Topic](https://www.youtube.com/channel/UCSdz4cIYVjtBb3_AuTR6LLg) | [과학하고 앉아있네](https://www.youtube.com/channel/UC_LO0RU54AgRBOqGiMYGIlg) |
 | [김필재 TV](https://www.youtube.com/c/%EA%B9%80%ED%95%84%EC%9E%ACTV-KPJTV) | [지식보관소](https://www.youtube.com/c/%EC%A7%80%EC%8B%9D%EB%B3%B4%EA%B4%80%EC%86%8C) | [과학쿠키](https://www.youtube.com/c/%EA%B3%BC%ED%95%99%EC%BF%A0%ED%82%A4ScienceCookie) |
@@ -49,7 +53,7 @@ paginate: true
 | [뉴스팩트럼](https://www.youtube.com/channel/UCgUaqrLRGLL-dHislR1e2TA/videos) | [위니버스](https://www.youtube.com/c/Weniverse) | [마크의 지식서재](https://www.youtube.com/c/%EB%A7%88%ED%81%AC%EC%9D%98%EC%A7%80%EC%8B%9D%EC%84%9C%EC%9E%AC) |
 | [카오스 사이언스](https://www.youtube.com/channel/UCbajejH7QkG6RTrZ6nyLe_g) | [김지윤의 지식Play](https://www.youtube.com/channel/UCXql5C57vS4ogUt6CPEWWHA) | [미스테리우스](https://www.youtube.com/c/%EB%AF%B8%EC%8A%A4%ED%85%8C%EB%A6%AC%EC%9A%B0%EC%8A%A4) |
 | [지식보관소](https://www.youtube.com/c/%EC%A7%80%EC%8B%9D%EB%B3%B4%EA%B4%80%EC%86%8C) | [1분과학](https://www.youtube.com/channel/UCFOixeB9gbedVi6uwnsfHMQ) | [이다지do](https://www.youtube.com/channel/UCEuh7pMi1-jZa4QTLH4k9eg) |
-| [아브라함](https://www.youtube.com/channel/UCPYCE6qJrJA60PpeD-WO6Xg) | [슈카월드](https://www.youtube.com/channel/UCsJ6RuBiTVWRX156FVbeaGg) | []() |
+| [아브라함](https://www.youtube.com/channel/UCPYCE6qJrJA60PpeD-WO6Xg) | []() | []() |
 
 
 **[포털]** <br>
