Update and rename 2023-03-16-돈 불리는방법을 알자.md to 2023-03-16-돈 불리는방법.md

--- a/_posts/2023-03-16-돈 불리는방법.md
+++ b/_posts/2023-03-16-돈 불리는방법.md
@@ -5,9 +5,7 @@ paginate: true
 
 ---
 
-<br>
-
-**[돈버는 사이트]** 
+[돈버는 사이트]
 
 | [부라더TV 쉽고 재밌게 돈 버는 노하우](https://www.youtube.com/@burother) | [절약왕 정약용](https://www.youtube.com/@jyyjyy) |
 | :--- | :--- |
@@ -21,7 +19,7 @@ paginate: true
 | [돈호신](https://www.youtube.com/@moneygel/videos) | [머니클립](https://www.youtube.com/@greenqueen/videos) |
 | [twotrack투트랙](https://www.youtube.com/@twotrack584/videos) | [돈버는 방법](https://contentsfree.com/%EC%A7%91%EC%97%90%EC%84%9C-%EC%9D%B8%ED%84%B0%EB%84%B7%EC%9C%BC%EB%A1%9C-%EB%8F%88%EB%B2%84%EB%8A%94-%EB%B0%A9%EB%B2%95-10%EA%B0%80%EC%A7%80/) |
 | [돈을버는 23가지방법](https://www.aladin.co.kr/shop/ebook/wPreviewViewer.aspx?itemid=257981624) | [돈구멍TV](https://www.youtube.com/c/%EB%8F%88%EA%B5%AC%EB%A9%8DTV) |
-<br>
+
 
 [<span style="color:red">***▪노마드마크, 집에서 돈 버는 노하우집***</span>](https://www.youtube.com/@nomad_mark)<br>
 [<span style="color:red">***▪휴대폰으로 그냥 사진만 찍어도 돈을 준다고? 정말 쉽게 돈버는 앱테크 추천)***</span>](https://www.youtube.com/watch?v=VElJJpoVIVY)<br>
