--- a/_posts/2023-09-25-수수하지만굉장해 평택점.md
+++ b/_posts/2023-09-25-수수하지만굉장해 평택점.md
@@ -2,7 +2,7 @@
 
 layout: post
 
-subtitle: '오늘은 맛있는걸 먹고싶네....'
+subtitle: '수수하지만굉장해 평택점'
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824575/theme14_gi2ypv.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559824575/theme14_gi2ypv.jpg
 paginate: true
