--- a/_posts/경기도,강원도,동남아 여행지.md
+++ b/_posts/경기도,강원도,동남아 여행지.md
@@ -3,7 +3,7 @@ tags: []
 layout: post
 categories: jekyll
 subtitle: '출처 = 구글 여행지'
-image: https://user-images.githubusercontent.com/13609186/270501637-9ace0b48-5cad-4ba3-9745-7cdb68b7eea3.jpeg
+image: https://user-images.githubusercontent.com/13609186/271769559-2080068d-b560-4d60-b447-a07a00750116.jpg
 paginate: true
 
 ---
