--- a/_posts/경기도,강원도,동남아 여행지.md
+++ b/_posts/경기도,강원도,동남아 여행지.md
@@ -2,7 +2,7 @@
 tags: []
 layout: post
 categories: jekyll
-subtitle: '출처 = 구글 여행지'
+subtitle: ''
 image: https://user-images.githubusercontent.com/13609186/271769559-2080068d-b560-4d60-b447-a07a00750116.jpg
 paginate: true
 
