--- a/_posts/재테크.md
+++ b/_posts/재테크.md
@@ -8,6 +8,8 @@ paginate: true
 
 ---
 
+사진_출처 = ChatGPTAI로 생성 <br>
+
 ▪부자들의 분산투자법칙:<br>
 &nbsp;⑴40투자:펀드(국내,해외,원자재),ELS(주가<br>
 &nbsp;&nbsp;&nbsp;지수연계형증권),ELD(주가지수연계형예금),<br>
