--- a/_posts/재테크.md
+++ b/_posts/재테크.md
@@ -8,7 +8,7 @@ paginate: true
 
 ---
 
-사진_출처 = ChatGPTAI로 생성 <br>
+Foot사진_출처 = ChatGPTAI로 생성 <br>
 
 ▪부자들의 분산투자법칙:<br>
 &nbsp;⑴40투자:펀드(국내,해외,원자재),ELS(주가<br>
